--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,10 +1,13 @@
 <html>
 
 <body>
+<h2>Current ID</h2>
+<button>new session</button>
+<br></br>
+<button>play</button>
+<br></br>
+<button>pause</button>
 
-<h1>
-    POPUPPI TOIMII !!! JEE ONNEA!!
-</h1>
 
 </body>
 </html>
