Added popup.js, empty

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -2,12 +2,13 @@
 
 <body>
 <h2>Current ID</h2>
-<button>new session</button>
-<br></br>
-<button>play</button>
-<br></br>
-<button>pause</button>
 
+<button id="session">new session</button>
+<br></br>
+<button id="play">play</button>
+<br></br>
+<button id="pause">pause</button>
 
+<script src="popup.js"></script>
 </body>
 </html>
