Cleaning up some stuff

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -3,7 +3,7 @@
 <body>
 <h2 id="currentid">Current ID</h2>
 
-<button id="session">new session</button>
+<button id="status">status</button>
 <br></br>
 <button id="play">play</button>
 <br></br>
