Changed the message contents

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -8,7 +8,8 @@
 <button id="play">play</button>
 <br></br>
 <button id="pause">pause</button>
-
+<br></br>
+<button id="skip">skip</button>
 <script src="popup.js"></script>
 </body>
 </html>
