--- a/popup/popup.html
+++ b/popup/popup.html
@@ -10,6 +10,8 @@
 <button id="pause">pause</button>
 <br></br>
 <button id="skip">skip</button>
+<br></br>
+<button id="lock">use this tab</button>
 <script src="popup.js"></script>
 </body>
 </html>
