Fixed ip as key in nodes object

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -3,13 +3,13 @@
 <body>
 <h2 id="currentid">Current ID</h2>
 
-<button id="status">status</button>
+<button id="play">force play</button>
 <br></br>
-<button id="play">play</button>
+<button id="pause">force pause</button>
 <br></br>
-<button id="pause">pause</button>
+<button id="skip">force skip</button>
 <br></br>
-<button id="skip">skip</button>
+<button id="url">force to "that" url</button>
 <br></br>
 <button id="lock">use this tab</button>
 <script src="popup.js"></script>
