--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,8 +1,11 @@
 <html>
 
 <body>
-<h2 id="currentid">Current ID</h2>
-
+<!--<h2 id="currentid">Current ID</h2>-->
+<table id="table" border='1'>
+    <tr></tr>
+  </table>
+<br></br>
 <button id="play">force play</button>
 <br></br>
 <button id="pause">force pause</button>
