Session creation and force messaged implemented

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,15 +1,16 @@
 <html>
 
 <body>
-<h2 id="currentid">Current ID</h2>
-
+<!--<h2 id="currentid">Current ID</h2>-->
+<table id="table" border='1'>
+    <tr></tr>
+  </table>
+<br></br>
 <button id="play">force play</button>
 <br></br>
 <button id="pause">force pause</button>
 <br></br>
-<button id="skip">force skip</button>
-<br></br>
-<button id="url">force to "that" url</button>
+<button id="create">Create new session</button>
 <br></br>
 <button id="lock">use this tab</button>
 <script src="popup.js"></script>
